// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchInput Component SwitchInput renders highlighted 1`] = `
<div>
  <div
    class="field gds-switch-container"
  >
    <label
      class="input-switch-field-read-only"
      data-testid="KEY_0"
      for="checkbox-31"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-checked="false"
          aria-label="Switch label 0"
          class="silver"
          id="checkbox-31"
          role="checkbox"
        />
      </div>
      Switch label 0
    </label>
    <label
      class="input-switch-field-read-only input-switch-field-checked"
      data-testid="KEY_1"
      for="checkbox-32"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          aria-hidden="true"
          checked=""
          readonly=""
          type="checkbox"
        />
        <span
          aria-checked="true"
          aria-label="Switch label 1"
          class="silver"
          id="checkbox-32"
          role="checkbox"
        />
      </div>
      Switch label 1
    </label>
    <label
      class="input-switch-field-read-only"
      data-testid="KEY_2"
      for="checkbox-33"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-checked="false"
          aria-label="Switch label 2"
          class="silver"
          id="checkbox-33"
          role="checkbox"
        />
      </div>
      Switch label 2
    </label>
    <label
      class="input-switch-field-read-only"
      data-testid="KEY_3"
      for="checkbox-34"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-label="Switch label 3"
          class="silver"
          id="checkbox-34"
          role="checkbox"
        />
      </div>
      Switch label 3
    </label>
    <label
      class="input-switch-field-read-only field-highlighted"
      data-testid="KEY_4"
      for="checkbox-35"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-label="Switch label 4"
          class="silver"
          id="checkbox-35"
          role="checkbox"
        />
      </div>
      Switch label 4
    </label>
    <label
      class="input-switch-field-read-only"
      data-testid="KEY_5"
      for="checkbox-36"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-label="Switch label 5"
          class="silver"
          id="checkbox-36"
          role="checkbox"
        />
      </div>
      Switch label 5
    </label>
  </div>
</div>
`;

exports[`SwitchInput Component SwitchInput renders with input 1`] = `
<div>
  <div
    class="field gds-switch-container"
  >
    <label
      class=""
      data-testid="KEY_0"
      for="checkbox-1"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-label="Switch label 0"
          class="pebble"
          id="checkbox-1"
          role="checkbox"
        />
      </div>
      Switch label 0
    </label>
    <label
      class="input-switch-field-checked"
      data-testid="KEY_1"
      for="checkbox-2"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          aria-hidden="true"
          checked=""
          readonly=""
          type="checkbox"
        />
        <span
          aria-checked="true"
          aria-label="Switch label 1"
          class="primary"
          id="checkbox-2"
          role="checkbox"
        />
      </div>
      Switch label 1
    </label>
    <label
      class=""
      data-testid="KEY_2"
      for="checkbox-3"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-checked="false"
          aria-label="Switch label 2"
          class="pebble"
          id="checkbox-3"
          role="checkbox"
        />
      </div>
      Switch label 2
    </label>
    <label
      class=""
      data-testid="KEY_3"
      for="checkbox-4"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-label="Switch label 3"
          class="pebble"
          id="checkbox-4"
          role="checkbox"
        />
      </div>
      Switch label 3
    </label>
    <label
      class=""
      data-testid="KEY_4"
      for="checkbox-5"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-label="Switch label 4"
          class="pebble"
          id="checkbox-5"
          role="checkbox"
        />
      </div>
      Switch label 4
    </label>
    <label
      class=""
      data-testid="KEY_5"
      for="checkbox-6"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-label="Switch label 5"
          class="pebble"
          id="checkbox-6"
          role="checkbox"
        />
      </div>
      Switch label 5
    </label>
  </div>
</div>
`;

exports[`SwitchInput Component SwitchInput renders with no options 1`] = `
<div>
  <div
    class="field gds-switch-container"
  />
</div>
`;
